format prices and fix display flicker

--- a/css/app.scss
+++ b/css/app.scss
@@ -1,3 +1,6 @@
 * {
     font-family: sans-serif, Arial, Helvetica;
 }
+svg {
+    display: inherit;
+}
